src/objects/Mogli_SMS__Integrated_Object__mdt.object
<CustomObject>
    <description>This custom metadata type is used to track which objects are integrated with the package.</description>
    <fields>
        <fullName>Mogli_SMS__Default_Gateway_Field__c</fullName>
        <label>Default Gateway Field</label>
        <metadataRelationshipControllingField>Mogli_SMS__Integrated_Object__mdt.Mogli_SMS__Integrated_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Integrated_Objects3</relationshipLabel>
        <relationshipName>Integrated_Objects3</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Form_Lookup_Field__c</fullName>
        <description>The API Name of the lookup field for the integrated object on the Form object</description>
        <label>Form Lookup Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Gateway_Priority__c</fullName>
        <label>Gateway Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Integrated_Object__c</fullName>
        <label>Integrated Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Integrated_Objects</relationshipLabel>
        <relationshipName>Integrated_Objects</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Merge_Fields2__c</fullName>
        <label>Merge Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Merge_Fields__c</fullName>
        <label>(Deprecated) Merge Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Mogli_Avatar_URL_Field__c</fullName>
        <label>Mogli Avatar URL Field</label>
        <metadataRelationshipControllingField>Mogli_SMS__Integrated_Object__mdt.Mogli_SMS__Integrated_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Integrated_Objects2</relationshipLabel>
        <relationshipName>Integrated_Objects2</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Mogli_Display_Field__c</fullName>
        <defaultValue>&apos;Name&apos;</defaultValue>
        <label>Mogli Display Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Mogli_Number_Field__c</fullName>
        <label>Mogli Number Field</label>
        <metadataRelationshipControllingField>Mogli_SMS__Integrated_Object__mdt.Mogli_SMS__Integrated_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Integrated_Objects1</relationshipLabel>
        <relationshipName>Integrated_Objects1</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Mogli_Opt_Out_Field__c</fullName>
        <label>Mogli Opt Out Field</label>
        <metadataRelationshipControllingField>Mogli_SMS__Integrated_Object__mdt.Mogli_SMS__Integrated_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Integrated_Objects</relationshipLabel>
        <relationshipName>Integrated_Objects</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__SMS_Lookup_Field__c</fullName>
        <description>The API Name of the lookup field for the integrated object on the SMS object.</description>
        <label>SMS Lookup Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Mogli Integrated Object</label>
    <pluralLabel>Mogli Integrated Objects</pluralLabel>
</CustomObject>